--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
-	<title>DragForm</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<title>DragForm(暂时左右位移)</title>
+	<link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css">
+
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-	<div id="box">
+	<div class="container-fluid">
+		<div class="bs-docs-grid">
+			<div class="row show-grid">
+			  <div class="col-md-3 text-center myborder">.col-md-3</div>
+			  <div class="col-md-3 text-center myborder">.col-md-3</div>
+			  <div class="col-md-3 text-center myborder">.col-md-3</div>
+			  <div class="col-md-3 text-center myborder">.col-md-3</div>
+			</div>
+		</div>
+
+		<div class="bs-docs-grid">
+			<div class="row show-grid">
+			  <div class="col-md-4 text-center myborder">.col-md-4</div>
+			  <div class="col-md-4 text-center myborder">.col-md-4</div>
+			  <div class="col-md-4 text-center myborder">.col-md-4</div>
+			</div>
+		</div>
+
+		<div id="box2">
+		</div>
+		<div id="box">
+		</div>
 	</div>
+	<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
 	<script src="js/renderMyForm.js?version=999"></script>
 </body>
 </html>
