--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-	<script src="js/renderMyForm.js?version=999"></script>
+	<script src="dist/renderMyForm.js?version=999"></script>
 </body>
 </html>
